...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/drawable_error_loading_flag" />

    <EditText
        android:id="@+id/exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:digits="0123456789."
        android:enabled="false"
        android:inputType="numberDecimal"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/flag_image"
        app:layout_constraintRight_toLeftOf="@id/exchange_rate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currency_code"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingStart="@dimen/list_item_padding"
...
